--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "test": "jest",
     "test:watch": "jest --watchAll"
   },
+  "engines": {
+    "node": "22.x"
+  },
   "author": "",
   "license": "MIT",
   "dependencies": {
